k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: postgres
  template:  # template used for creating the pod
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # this should match the volume section name entry.
              mountPath: /var/lib/postgresql/data  # where inside of container will be stored in the volume
              subPath: postgres  # any data inside of the container inside of the mountpath, going to be sotred inside of a folder inside of persistentVolumeClaim, specific to postgres
