k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector: 
    matchLabels:
      component: server  # this key value pair can be named as anything.
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: jesszhang/multi-server
          ports:
            - containerPort: 5000
          env:  # we need to pass these enviroment variables to the server
            - name: REDIS_HOST
              value: redis-cluster-ip-service
            - name: REDIS_PORT
              value: '6379'
            - name: PGUSER
              value: postgres
            - name: PGHOST
              value: postgres-cluster-ip-service
            - name: PGPORT
              value: '5432'  # environmnet variables cannot be integer, has to be strings
            - name: PGDATABASE
              value: postgres
            - name: PGPASSWORD  # this is not related to the real password
              valueFrom:
                secretKeyRef:
                  name: pgpassword  #  kubectl create secret generid pgpassword ...
                  key: PGPASSWORD # kubectl create secret generic pgpassword --from literal PGPASSWORD=...
